fixed color, alignment, maxwidth

--- a/src/app/common.css
+++ b/src/app/common.css
@@ -158,7 +158,7 @@
   border: 1px solid var(--color-gray-3);
   border-radius: 2px;
   margin: 10px 20px 20px 20px;
-  height: 75vh;
+  height: 85vh;
   overflow-y: auto;
 }
 
