--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,7 @@
 }
 
 .darkMode .chat {
-  color: white;
+  color: #1D1D1F;
 }
 
 /* card */
